<resources>
    <string name="app_name">Crescoo Shop</string>
    <string name="login">Login</string>
    <string name="phone_number">Phone Number</string>
    <string name="noSignUp">Not signed up yet? Tap here to Sign Up</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="signup">SignUp</string>
    <string name="occupation">Occupation</string>
    <string name="sample">Sample</string>
    <string name="noLogin">Already Signed up? Tap here to Login</string>
    <string name="moreDet">More Details About You</string>
    <string name="years_of_experience">Years Of Experience</string>
    <string name="per_hour">Per Hour</string>
    <string name="your_pay_info">Your Pay Info</string>
    <string name="per_day">Per Day</string>
    <string name="enter_your_otp_here">Enter Your OTP Here</string>
    <string name="resendOTP">Did not get an OTP yet? Tap here to resend.</string>
    <string name="home">Home</string>
    <string name="username">UserName</string>
    <string name="sampleNumber">+97798xxxxxxxx</string>
    <string name="samplePerDay">Per Day:</string>
    <string name="sampleYear">4</string>
    <string name="textYears">Years of Experience</string>
    <string name="per_hour_4_20">Per Hour:</string>
    <string name="_420">420</string>
    <string name="_69">69</string>
    <string name="shop_name">Shop Name</string>
    <string name="shop_location">Shop Location</string>
    <string name="is_this_a_franchise_company">Is this a Franchise Company?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="owner_s_name">Owner\'s Name</string>
    <string name="sampleText">This is the page where you write about the SastaShark Tank\nthing change this</string>
    <string name="sampleText2">Do you want to sign up for this?</string>
    <string name="send_otp">Send OTP</string>
    <string name="description">Description</string>
    <string name="Inventory">Inventory</string>
    <string name="profile">Profile</string>
    <string name="billing">Billing</string>
    <string name="logout">Logout</string>
    <string name="shop_owner">Shop Owner</string>
    <string name="location">Location</string>
    <string name="shop_type">Shop Type</string>
    <string name="franchise_yes">Franchise: Yes</string>
    <string name="pitch">Pitch:</string>
    <string name="desc">Desc</string>
    <string name="edit_icon">edit icon</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="changed_your_mind_for_this_idea">Changed Your Mind For this Idea?</string>
    <string name="update">Update</string>
    <string name="add_item">Add Item</string>
    <string name="view">View</string>
    <string name="product_name">Product Name</string>
    <string name="quantity">Quantity</string>
    <string name="cost_price_per_quantity">Cost Price Per Quantity</string>
    <string name="selling_price_per_quantity">Selling Price Per Quantity</string>
</resources>