<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">


  <androidx.constraintlayout.widget.ConstraintLayout

      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".Activities.AddItem">


    <TextView
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        android:text="@string/add_item"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/productNameInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/product_name"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/productNameEditText"
          android:layout_width="250dp"
          android:singleLine="true"
          android:nextFocusForward="@id/quantityInputLayout"
          android:layout_height="wrap_content"
          android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/quantityInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/quantity"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/productNameInputLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/quantityEditText"
          android:layout_width="250dp"
          android:singleLine="true"
          android:inputType="number"
          android:nextFocusForward="@id/cpInputLayout"
          android:layout_height="wrap_content"
          android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cpInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/cost_price_per_quantity"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/quantityInputLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/cpEditText"
          android:layout_width="250dp"
          android:singleLine="true"
          android:inputType="numberDecimal"
          android:nextFocusForward="@id/spInputLayout"
          android:layout_height="wrap_content"
          android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spInputLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/selling_price_per_quantity"
        android:textColorHint="@color/grey"
        app:boxCornerRadiusBottomEnd="8dp"
        app:boxStrokeColor="@color/grey"
        app:endIconMode="clear_text"
        app:endIconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cpInputLayout">

      <com.google.android.material.textfield.TextInputEditText
          android:id="@+id/spEditText"
          android:layout_width="250dp"
          android:singleLine="true"
          android:inputType="numberDecimal"
          android:imeOptions="actionDone"
          android:layout_height="wrap_content"
          android:textColor="@color/black" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnAddItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="80dp"
        android:textAllCaps="false"
        android:text="@string/add_item"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spInputLayout" />

  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>